--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             padding-right: 25vw;
             list-style: '     ♛    ';">
 <h2>The data</h2>
-    <li> EARLS V1 (<a href="">dataset</a>) (<a href="">model card</a>)
+    <li> EARLS V1 (<a href="">dataset</a>) (<a href="https://earls-dataset.github.io/model-cards/model-card-earls-lstm.html">model card</a>)
     </li>
 <br>
 </div>
